# component_framework

./: CMakeLists.txt  binder.hpp
communication/: DroneComm.hpp
communication/transport_layer/: I2C_fake.hpp  I_Serial_Communication.hpp  UART_fake.hpp
components/: Component.hpp  I_BLDC.hpp  Output.hpp  OutputObserver.hpp  Singleton.hpp  type_name.hpp
control/: BLDC_fake.hpp  drone_control.hpp
